--- a/index.html
+++ b/index.html
@@ -51,6 +51,79 @@
         </div>
      </section>
     <!-- header section end........................................................ -->
+
+    <!-- Our services section start................................................. -->
+     <section id="service">
+        <div class="container mt-5">
+            <!-- title -->
+            <div class="row text-center ser-title">
+                <div class="col-md-6 offset-md-3 text-center">
+                    <h1>Our Services <img class="img-fluid" src="img/plug.png" alt=""></h1>
+                </div>
+                <!-- title end -->
+                 
+                <!-- service content -->
+                 <div class="row ser-content mt-5 text-center">
+                    <div style="width: 22rem;" class="col-md-4 mt-4 ser-box">
+                            <!-- img -->
+                            <div class="img-box">
+                                <img src="img/s1.png" alt="">
+                            </div>
+                            <!-- content -->
+                           <h5>Equipment installation</h5>
+                           <p>There are many variations of passages of Lorem Ipsum available,</p>
+                    </div>
+                    <div style="width: 22rem;" class="col-md-4 mt-4 ser-box">
+                            <!-- img -->
+                            <div class="img-box">
+                                <img src="img/s2.png" alt="">
+                            </div>
+                            <!-- content -->
+                           <h5>Windmill Energy</h5>
+                           <p>There are many variations of passages of Lorem Ipsum available,</p>
+                    </div>
+                    <div style="width: 22rem;" class="col-md-4 mt-4 ser-box">
+                            <!-- img -->
+                            <div class="img-box">
+                                <img src="img/s3.png" alt="">
+                            </div>
+                            <!-- content -->
+                           <h5>Equipment Maintenance</h5>
+                           <p>There are many variations of passages of Lorem Ipsum available,</p>
+                    </div>
+                    <!-- second row............................................... -->
+                    <div style="width: 22rem;" class="col-md-4 mt-4 ser-box">
+                            <!-- img -->
+                            <div class="img-box">
+                                <img src="img/s4.png" alt="">
+                            </div>
+                            <!-- content -->
+                           <h5>Offshore Engineering</h5>
+                           <p>There are many variations of passages of Lorem Ipsum available,</p>
+                    </div>
+                    <div style="width: 22rem;" class="col-md-4 mt-4 ser-box">
+                            <!-- img -->
+                            <div class="img-box">
+                                <img src="img/s5.png" alt="">
+                            </div>
+                            <!-- content -->
+                           <h5>Electrical Wiring</h5>
+                           <p>There are many variations of passages of Lorem Ipsum available,</p>
+                    </div>
+                    <div style="width: 22rem;" class="col-md-4 mt-4 ser-box">
+                            <!-- img -->
+                            <div class="img-box">
+                                <img src="img/s1.png" alt="">
+                            </div>
+                            <!-- content -->
+                           <h5>Electrical Wiring</h5>
+                           <p>There are many variations of passages of Lorem Ipsum available,</p>
+                    </div>
+                 </div>
+            </div>
+        </div>
+     </section>
+    <!-- Our services section end................................................. -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
